style.css
/* Add fonts from fonts directory */

/* Define Helvetica Neue Light */
@font-face {
    font-family: 'Helvetica Neue';
    src: url('./fonts/HelveticaNeue-Light.otf');
    font-weight: 300;
    font-style: normal;
}

/* Define Helvetica Neue Regular */
@font-face {
    font-family: 'Helvetica Neue';
    src: url('./fonts/HelveticaNeue-Regular.otf');
    font-weight: normal; /* Normal weight */
    font-style: normal;
}

/* Define Helvetica Neue Regular Italic */
@font-face {
    font-family: 'Helvetica Neue';
    src: url('./fonts/HelveticaNeue-RegularItalic.otf');
    font-weight: normal; /* Normal weight for italic */
    font-style: italic;
}


html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

html{
    font-size: 68.48%;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Helvetica Neue', Arial, sans-serif;
    font-weight: 300; /* This will apply the light weight */
    line-height: 1.6;
    color: rgba(0, 0, 0, 0.85);
}

body, html {
    margin: 0;
    padding: 0;
    font-family: "Helvetica Neue", Arial, sans-serif;
    font-weight: 300; /* This will apply the light weight */
}

b {
    font-family: 'Helvetica Neue', Arial, sans-serif;
    font-weight: bold; /* This will use the bold font defined in @font-face */
}

i {
    font-family: 'Helvetica Neue', Arial, sans-serif;
    font-style: italic; /* This will use the italic font defined in @font-face */
}

sub {
    font-family: 'Helvetica Neue'; /* If you want to apply Helvetica Neue to subscript */
    font-size: smaller; /* Makes the font size smaller than the surrounding text */
    vertical-align: sub; /* Aligns the text to subscript position */
}

/* Add styles for header, main, and footer */
header {
    padding: 0;
    background: #f4f4f4;
    text-align: center;
}

main {
    padding: 0px;
}

footer {
    padding: 0;
    background: #f4f4f4;
    text-align: center;
}

h1 {
	font-style: normal;
	font-weight: 400;
	padding: 0;
	margin: 0;
	font-size: 7rem;
	line-height: 0.9;
	color: rgba(0, 0, 0, 0.85);
	}

h2 {
	font-style: normal;
	font-weight: 300;
	padding: 0;
	margin: 0;
	color: rgba(0, 0, 0, 0.85);
	font-size: 3.2rem;
	line-height: 1.4;
    padding-bottom: 10px;
}

h3 {
	font-style: normal;
	font-weight: 300;
	padding: 0;
	margin: 0;
	color: rgba(0, 0, 0, 0.85);
	font-size: 5vmin;
	line-height: 1.4;
    margin-bottom: 10px;
}

h4 {
	font-size: 4vmin;
    font-weight: 300;
    margin-bottom: 10px;
}

h5 {
	font-size: 4vmin;
    font-weight: 300;
    margin-bottom: 10px;
}

h6 {
    font-size: 1.8rem;
    font-weight: 300;
    padding-bottom: 10px;
}

p {
    font-size: 2vmin;
    margin-bottom: 10px;
}

.site-menu{
    right: 1.7rem; 
    position: fixed;
    z-index: 1;
}

.marquee {
    min-height: 10rem;
    min-width: 100%;
    overflow: hidden;
    position: relative;
  }
  
  .marquee div {
    display: block;
    width: 200%;
    height: fit-content;
  
    position: absolute;
    overflow: hidden;
  
    animation: marquee 20s linear infinite;
  }
  
  .marquee span {
    float: left;
    width: 50%;
    margin: 20px 0;
  }
  
  @keyframes marquee {
    0% { left: 0; }
    100% { left: -100%; }
  }

.surrounding-elements {
    padding: 10px;
    margin: 10px;
    border: 1px solid black;
    background-color: #eee;
    color: black;
    }
    .surrounding-elements a {
    display: inline-block;
    padding: 10px;
    margin: -10px;
    border: none;
    background-color: transparent;
    color: #366EC3;
    text-decoration: none;
    }
    .surrounding-elements a:hover {
    background-color: #555;
    color: white;
}

/* Add styles for interactive elements (e.g., hover effects) */
a:hover {
    color: #555;
}

/* Add styles for the toggle button */
#menu-toggle {
    display: none;
    font-size: 30px;
    background-color: transparent;
    border: none;
    cursor: pointer;
}

/* Add styles for the responsive navigation menu */
nav.open ul {
    display: block;
}

@media screen and (max-width: 768px) {
    nav {
        text-align: center;
    }

    nav ul {
        display: none;
    }

    nav.open ul {
        display: block;
    }

    #menu-toggle {
        display: inline-block;
    }
}

#dropdown-menu{
    position: fixed;
    right: 25px;
    top: 10px;
    width: 200px;
    background-color: #000000;
    opacity: 0.6;
    border-radius: 2px;
    z-index: 1;
}

li {
    padding: 12px 16px;
}

li a{
    color: white;
    text-decoration: none;
    font-size: 2rem;
    font-weight: 300;
}

ul{
    list-style-type: none;
}

/* Add styles for full-screen sections */
.full-screen-section {
    width: 100%;
    min-height: 100vh; /* vh stands for viewport height */
    position: relative;
    max-width: 100%;
}

.content-wrapper{
    padding: 0 30px;
}

.home-bg {
    background-image: url('././img/IMG_9757.jpeg');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.research-bg {
    background-color: #366EC3;
}

.code-bg {
    background-color: #F5CB45;
} 

.publications-bg {
    background-color: #9AC685;
} 

 
.field-bg {
    background-color: #F3E4E7;
}

.teaching-bg {
    background-color: #FFEDAD;
} 

.custom-links {
    font-weight: 300;
    color: #45a15c;
    margin-bottom: 1.4px;
    text-decoration: none;
}

.columns {
    display: flex;
}

.column {
    flex: 1;
    display: flex;
    padding: 20px; 
    align-items: center; /* Center images vertically */
    justify-content: center; /* Center images horizontally */
}

.column img {
    /* width: 100%; */
    max-height: 650px; 
    /* height: 100%; */
    max-width: 1200px;
    object-fit: contain; 
}

.columns_photo {
    display: flex;
}

.column_photo {
    flex: 1;
    display: flex;
    padding: 20px; 
    align-items: center; /* Center images vertically */
    justify-content: center; /* Center images horizontally */
}

.column_photo img {
    width: 100%;
    height: 100%;
    max-width: 1250px;
    object-fit: contain; 
}



.field-grid{
    padding: 0px 20px; 
    display: grid; 
    grid-template-columns: 50% 50%; 
    column-gap: 20px; 
    row-gap: 20px;
}

.caption-columns{
    margin-bottom: 5px!important;
}

figure {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
}

figcaption {
    text-align: center;
    font-weight: 335;
    font-size: 1.8rem;
    margin: 5px 0 0 0;
    flex: 1;
    display: block;
    align-items: center;
    max-height: 100%;
  }
figcaption a {
    font-weight: 335;
    font-size: 1.8rem;
    color: #45a15c;
    text-decoration: none;
}

@media (max-width: 1000px) {
    .columns {
        flex-direction: column;
    }
} 

